--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,6 @@
     <title>Octograph</title>
 </head>
 <body>
-<h1>Welcome to Octograph</h1>
-<script src="../docs/index.js"></script>
+<div id="root"></div>
 </body>
 </html>
